--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "weather",
+  "name": "weather-task",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ng build --aot"
   },
   "private": true,
   "dependencies": {
