--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "weather",
+  "name": "weather-task",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "postinstall": "ng build --aot --prod"
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.0",
     "@angular/cdk": "^12.1.1",
+    "@angular/cli": "~12.1.0",
     "@angular/common": "~12.1.0",
     "@angular/compiler": "~12.1.0",
+    "@angular/compiler-cli": "~12.1.0",
     "@angular/core": "~12.1.0",
     "@angular/forms": "~12.1.0",
     "@angular/material": "^12.1.1",
@@ -22,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
     "express": "^4.17.1",
+    "path": "^0.12.7",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.3",
     "rxjs": "~6.6.0",
