--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "weather-task",
+  "name": "weather",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
-    "postinstall": "ng build --prod"
+    "heroku-postinstall": "ng build  --aot --prod"
   },
   "private": true,
   "dependencies": {
+     "@angular/cli": "~12.1.0",
+    "@angular/compiler-cli": "~12.1.0",
     "@angular/animations": "~12.1.0",
     "@angular/cdk": "^12.1.1",
-    "@angular/cli": "~12.1.0",
     "@angular/common": "~12.1.0",
     "@angular/compiler": "~12.1.0",
-    "@angular/compiler-cli": "~12.1.0",
     "@angular/core": "~12.1.0",
     "@angular/forms": "~12.1.0",
     "@angular/material": "^12.1.1",
