--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
           "strict": true
         }
       },
-      "root": "",
+      "root": "build/",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
